testsuite/tests/lexical_envs/invalid_subunit_root/multiple.lkt
grammar foo_grammar {
    @main_rule main_rule <- or(Example1("example" ",")
                             | Example2("example" ";"))
}
